fix overflow

--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -257,6 +257,8 @@ main .contact {
   .about-sections,
   .work-sections {
     grid-template-rows: 1fr 1fr 1fr 1fr;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   .main-content {
     grid-column-start: 1;
@@ -321,6 +323,7 @@ main .contact {
     grid-column: 4/7;
     border-top: 0.0625rem solid $border-color;
   }
+ 
   .home section:first-child .image {
     background-image: url("https://ik.imagekit.io/nollume/tr:w-450/geran-de-klerk-WJkc3xZjSXw-unsplash_At_phX5wT.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1669043507954");
   }
@@ -362,12 +365,6 @@ main .contact {
 }
 
 @media (max-width: 31.25rem) {
-  .home-sections,
-  .about-sections,
-  .work-sections {
-    overflow-y: auto;
-    overflow-x: hidden;
-  }
   .main-content {
     h3 {
       margin-bottom: 0.1rem;
